2008-04-10  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIOCmd.c (Tcl_FcopyObjCmd): Keeping check for negative
	values, changed to not be an error, but behave like the special
	value -1 (copy all, default).

	* tests/iocmd.test (iocmd-15.{12,13}): Removed.

	* tests/io.test (io-52.5{,a,b}): Reverted last change, added
	* tests/chanio.test (chan-io-52.5{,a,b}): comment regarding the
	meaning of -1, added two more testcases for other negative values,
	and input wrapped to negative.

2008-04-09  Andreas Kupries  <andreask@activestate.com>

	* tests/chanio.test (chan-io-52.5): Removed '-size -1' from test,
	* tests/io.test (io-52.5): does not seem to have any bearing, and
	  was an illegal value.

	* generic/tclIOCmd.c (Tcl_FcopyObjCmd): Added checking of -size
	* tests/ioCmd.test (iocmd-15.{13,14}): value to reject negative
	values, and values overflowing 32-bit signed. [Bug 1557855]. Basic
	patch by Alexandre Ferrieux <ferrieux@users.sourceforge.net>, with
	modifications from me to separate overflow from true negative
	value. Extended testsuite.

2008-04-08  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-53.8): Fixed ordering of vwait and after
	cancel. cancel has to be done after the vwait completes.

2008-04-09  Daniel Steffen  <das@users.sourceforge.net>

	* tests/chanio.test (chan-io-53.8,53.9,53.10):	fix typo & quoting for
	* tests/io.test (io-53.8,53.9,53.10):		spaces in builddir path

2008-04-07  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-53.10): Testcase for bi-directionaly fcopy.
	* tests/chanio.test:
	* generic/tclIO.c: Additional changes to data structures for fcopy
	* generic/tclIO.h: and channels to perform proper cleanup in case
	of a channel having two background copy operations running as is
	now possible.

	* tests/io.test (io-53.10): Testcase for bi-directionaly fcopy.
	* generic/tclIO.c: Additional changes to data structures for fcopy